--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -70,6 +70,8 @@ jobs:
         run: ./shell-scripts/say-hello.sh
       
       # Example of a step-level env var, calling Bash script with arg and getting return value
+      # In Bash, >> redirects the standard output to whatever is to the right of >>
+      # GITHUB_ENV is the environment file. TBD TODO: ELABORATE
       - name: Give shell script an arg (even num), assign boolean value that action can use
         env: 
           DIVISIBLE_BY_2: false 
