continue troubleshoot null string

--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -76,7 +76,7 @@ jobs:
         env: 
           # DIVISIBLE_BY_2: false 
         run: |
-          echo "$(./shell-scripts/divide.sh is_divisible_by_2 2)" >> $GITHUB_ENV
+          echo "DIVISIBLE_BY_2=$(./shell-scripts/divide.sh is_divisible_by_2 2)" >> $GITHUB_ENV
       
       - name: Return boolean value from previous step 
         run: |
