--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -71,12 +71,12 @@ jobs:
       
       # Example of a step-level env var, calling Bash script with arg and getting return value
       # In Bash, >> redirects the standard output to whatever is to the right of >>
-      # GITHUB_ENV is the environment file. TBD TODO: ELABORATE
+      # GITHUB_ENV is the environment file. TBD Subsequent steps have access TODO: ELABORATE
       - name: Give shell script an arg (even num), assign boolean value that action can use
         # env: 
           # DIVISIBLE_BY_2: false 
         run: |
-          echo "DIVISIBLE_BY_2=$(./shell-scripts/divide.sh is_divisible_by_2 2)" >> $GITHUB_ENV
+          echo "{DIVISIBLE_BY_2}=$(./shell-scripts/divide.sh is_divisible_by_2 2)" >> $GITHUB_ENV
       
       - name: Return boolean value from previous step 
         run: |
