--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -73,15 +73,20 @@ jobs:
       # In Bash, >> redirects the standard output to whatever is to the right of >>
       # GITHUB_ENV is the environment file. TBD Subsequent steps have access TODO: ELABORATE
       - name: Give shell script an arg (even num), assign boolean value that action can use
+        id: divis-by-2
         # env: 
           # DIVISIBLE_BY_2: false 
         run: |
           echo "DIVISIBLE_BY_2=$(./shell-scripts/divide.sh is_divisible_by_2 2)" >> $GITHUB_ENV
+          echo "DIVISIBLE_BY_2_B=$(./shell-scripts/divide.sh is_divisible_by_2 2)" >> $GITHUB_OUTPUT
       
       - name: Return boolean value from previous step 
+        env:
+          DIVISIBLE_BY_2_B: ${{ steps.divis-by-2.DIVISIBLE_BY_2_B }}
         run: |
           echo "DIVISIBLE_BY_2 = $DIVISIBLE_BY_2"
           echo "DIVISIBLE_BY_2 (env)= ${{env.DIVISIBLE_BY_2}}"
+          echo "DIVISIBLE_BY_2_B = $DIVISIBLE_BY_2_B"
 
 
       # TODO: Figure out how to list teams
