--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -77,8 +77,8 @@ jobs:
         # env: 
           # DIVISIBLE_BY_2: false 
         run: |
-          echo "DIVISIBLE_BY_2=$(./shell-scripts/divide.sh is_divisible_by_2 2)" >> $GITHUB_ENV
-          echo "DIVISIBLE_BY_2_B=$(./shell-scripts/divide.sh is_divisible_by_2 2)" >> $GITHUB_OUTPUT
+          echo "DIVISIBLE_BY_2=$(echo ./shell-scripts/divide.sh is_divisible_by_2 2)" >> $GITHUB_ENV
+          echo "DIVISIBLE_BY_2_B=$(echo ./shell-scripts/divide.sh is_divisible_by_2 2)" >> $GITHUB_OUTPUT
       
       - name: Return boolean value from previous step 
         env:
