--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -47,11 +47,11 @@ jobs:
           echo "PR_NUMBER = $PR_NUMBER"
           echo "$ {PR_NUMBER} = ${PR_NUMBER}"
 
-      # An example of how to use the 'github' context
+      # Example of how to use the 'github' context
       - name: Print the organization
         run: echo "The organization name is:${{github.repository_owner}}"
       
-      # Use simple Bash ${string/substring-to-replace/replacement} logic on job-env var COMMENT_URL 
+      # Example Use simple Bash ${string/substring-to-replace/replacement} logic on job-env var COMMENT_URL 
       - name: Modify COMMENT_URL    
         run: |  
           echo "URL before:  $COMMENT_URL"
@@ -65,34 +65,28 @@ jobs:
       - name: Make shell scripts executable
         run: chmod +x ./shell-scripts/*.sh # Gives execute permissions to the script
       
-        # Example of how to run a shell script from within a workflow
+      # Example of how to run a shell script from within a workflow
       - name: Run the say-hello.sh shell script
         run: ./shell-scripts/say-hello.sh
       
-      # Example of a step-level env var, calling Bash script with arg and getting return value
-      # In Bash, >> redirects the standard output to whatever is to the right of >>
-      # GITHUB_ENV is the environment file. TBD Subsequent steps have access TODO: ELABORATE
-      #TODO: GITHUB_OUTPUT WHAT IS IT
-      #TODO: ALL 2_B stuff WORKS!!!
-      - name: Give shell script an arg (even num), assign boolean value that action can use
-        id: divis-by-2
-        # env: 
-          # DIVISIBLE_BY_2: false 
-          # echo "DIVISIBLE_BY_2_C=$(./shell-scripts/divide.sh 'is_divisible_by_2' 2)" >> $GITHUB_OUTPUT
-          # echo "DIVISIBLE_BY_2_B=$(./shell-scripts/divide.sh 'is_divisible_by_2' 2)" >> $GITHUB_OUTPUT
+      # Example of a step with an id, calling Bash script with arg and writing return value to GITHUB_OUTPUT
+      - name: Give shell script an arg (the int 2), write result to GITHUB_OUTPUT
+        # A step id is used by other steps in the workflow. It is distinct from name, which is more for display purposes. (see below for details)
+        id: divis_by_2
+        # In Bash, >> redirects the standard output to whatever is to the right of >> (in this case GITHUB_OUTPUT)
+        # GITHUB_OUTPUT is an environment variable that points to an environment file, a temporary file that workflows can access 
+        # Items written to GITHUB_OUTPUT can be referenced by later steps via the syntax steps.step_name.outputs.VAR_NAME
+        # An id must be present in the step where GITHUB_OUTPUT is written to so the step can be referenced via the above syntax
+        # Call shell script with 2 args: method_name and num_to_divide
         run: |
-          echo "DIVISIBLE_BY_2=$(./shell-scripts/divide.sh 'is_divisible_by_2' 2)" >> $GITHUB_ENV
+          echo "DIVISIBLE_BY_2_B=$(./shell-scripts/divide.sh 'is_divisible_by_2' 2)" >> $GITHUB_OUTPUT
       
-      - name: Return boolean value from previous step 
-        # env:
-          # DIVISIBLE_BY_2: ${{ steps.divis-by-2.outputs.DIVISIBLE_BY_2 }}
-          # DIVISIBLE_BY_2_B: ${{ steps.divis-by-2.outputs.DIVISIBLE_BY_2_B }}
-          # DIVISIBLE_BY_2_C: ${{ steps.divis-by-2.outputs.DIVISIBLE_BY_2_C }}
-          # echo "DIVISIBLE_BY_2 (env)= ${{env.DIVISIBLE_BY_2}}"
-          # echo "DIVISIBLE_BY_2_B = $DIVISIBLE_BY_2_B"
-          # echo "DIVISIBLE_BY_2_C = $DIVISIBLE_BY_2_C"
+      # Example of how to reference output from another previous, step-level env var
+      - name: Return value from previous step via GITHUB_OUTPUT 
+        env:
+          DIVISIBLE_BY_2_B: ${{ steps.divis_by_2.outputs.DIVISIBLE_BY_2_B }}
         run: |
-          echo "DIVISIBLE_BY_2 = $DIVISIBLE_BY_2"
+          echo "DIVISIBLE_BY_2_B = $DIVISIBLE_BY_2_B"
 
 
       # TODO: Figure out how to list teams
