--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -79,8 +79,9 @@ jobs:
         # An id must be present in the step where GITHUB_OUTPUT is written to so the step can be referenced via the above syntax
         # Call shell script with 2 args: method_name and num_to_divide
         run: |
-          DIVISIBLE_BY_2_A=$(./shell-scripts/divide.sh 'is_divisible_by_2' '2')
-          echo "DIVISIBLE_BY_2_B=$DIVISIBLE_BY_2_A" >> $GITHUB_OUTPUT
+          echo 'var<<EOF' >> $GITHUB_OUTPUT
+          echo "DIVISIBLE_BY_2_B=$(./shell-scripts/divide.sh 'is_divisible_by_2' '2')" >> $GITHUB_OUTPUT
+          echo 'EOF' >> $GITHUB_OUTPUT
       
       # Example of how to reference output from another previous, step-level env var
       - name: Return value from previous step via GITHUB_OUTPUT 
