--- a/.github/workflows/closing-pr-comment-timestamp.yml
+++ b/.github/workflows/closing-pr-comment-timestamp.yml
@@ -5,6 +5,7 @@ name: Closing PR Comment w timestamp
 
 on:
   pull_request:
+    # Only on closed PRs
     types: [closed]
 
   # Allows you to run this workflow manually from the Actions tab
@@ -12,7 +13,6 @@ on:
 
 
 jobs:
-  # This workflow contains a single job called "test-job"
   closing-pr-comment-job:
     
     runs-on: ubuntu-latest
@@ -24,6 +24,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Closing comment on PR
+        id: closing_comment_step
         run: |
           COMMENT="This pull request was closed on $TIMESTAMP."
           COMMENT_URL="https://api.github.com/repos/${{github.repository}}/issues/NUM/comments"
@@ -32,4 +33,7 @@ jobs:
           # # -H = custom curl header, -X used to specify HTTP method, -d indicates the data to send
           
           echo $COMMENT_URL
-          curl -s -H "Authorization: token ${GITHUB_TOKEN}" -X POST $COMMENT_URL -d "{\"body\":\"$COMMENT\"}"
+          STATUS_CODE=$(curl -s -H "Authorization: token ${GITHUB_TOKEN}" -X POST $COMMENT_URL -d "{\"body\":\"$COMMENT\"}")
+          echo "STATUS_CODE=$STATUS_CODE" >> $GITHUB_OUTPUT
+      - name: Print Status Code 
+        run: echo "Status code = ${{ steps.closing_comment_step.STATUS_CODE }}"
