--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -12,8 +12,14 @@ on:
   # pull_request:
   #   branches: [ "main" ]
 
-  # Allows you to run this workflow manually from the Actions tab
+  # workflow_dispatch allows you to run this workflow manually from the Actions tab
+  # The inputs context TODO EXPLAIN
   workflow_dispatch:
+    inputs:
+      pr_number_manual:
+        description: "PR number to use when this action is manually triggered"
+        required: true
+        type: string
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -43,7 +49,7 @@ jobs:
           echo test, and deploy your project.
 
       # Shows how the variables described in job-level env can be used by subsequent steps   
-      - name: Echo job env vars
+      - name: Echo job-level env vars
         run: |
           echo "PR_NUMBER = $PR_NUMBER"
           echo "$ {PR_NUMBER} = ${PR_NUMBER}"
@@ -52,7 +58,7 @@ jobs:
       - name: Print the organization
         run: echo "The organization name is:${{github.repository_owner}}"
       
-      # Example Use simple Bash ${string/substring-to-replace/replacement} logic on job-env var COMMENT_URL 
+      # Example Use simple Bash ${string/substring-to-replace/replacement} logic on job-env var COMMENT_URL (replace "NUM" with $PR_NUMBER)
       - name: Modify COMMENT_URL    
         run: |  
           echo "URL before:  $COMMENT_URL"
