--- a/.github/workflows/closing-pr-comment-timestamp.yml
+++ b/.github/workflows/closing-pr-comment-timestamp.yml
@@ -28,8 +28,8 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Assess pr_number_manual input
-        if: ${{ inputs.pr_number_manual }} == ''
-        run: echo "pr_number_manual is blank :("
+        if: ${{ inputs.pr_number_manual }} != ''
+        run: echo "pr_number_manual is NOT blank :)"
       - name: Closing comment on PR
         id: closing_comment_step
         run: |
