--- a/.github/workflows/closing-pr-comment-timestamp.yml
+++ b/.github/workflows/closing-pr-comment-timestamp.yml
@@ -29,10 +29,13 @@ jobs:
 
       - name: Assess pr_number_manual input
         if: ${{ inputs.pr_number_manual }} != ''
-        run: echo "pr_number_manual is NOT blank :)"
+        run: | 
+          echo "Job manually started: Setting PR_NUMBER to value of inputs.pr_number_manual"
+          echo "PR_NUMBER=${{ inputs.pr_number_manual }}" >> $GITHUB_ENV
       - name: Closing comment on PR
         id: closing_comment_step
         run: |
+          echo "Adding closing comment to PR Number: $PR_NUMBER"
           COMMENT="This pull request was closed on $TIMESTAMP."
           COMMENT_URL="https://api.github.com/repos/${{github.repository}}/issues/NUM/comments"
           # Replace "NUM" with with the PR_NUMBER env var
