--- a/.github/workflows/closing-pr-comment-timestamp.yml
+++ b/.github/workflows/closing-pr-comment-timestamp.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Assess pr_number_manual input
         if: ${{ inputs.pr_number_manual }} != ''
         run: | 
-          echo "Job manually started: Setting PR_NUMBER to value of inputs.pr_number_manual"
+          echo "Job manually started: Setting PR_NUMBER to value of inputs.pr_number_manual (${{ inputs.pr_number_manual }})"
           echo "PR_NUMBER=${{ inputs.pr_number_manual }}" >> $GITHUB_ENV
       - name: Closing comment on PR
         id: closing_comment_step
@@ -44,6 +44,7 @@ jobs:
           
           echo $COMMENT_URL
           STATUS_CODE=$(curl -s -H "Authorization: token ${GITHUB_TOKEN}" -X POST $COMMENT_URL -d "{\"body\":\"$COMMENT\"}")
-          echo "STATUS_CODE=$STATUS_CODE" >> $GITHUB_OUTPUT
+          echo "STATUS_CODE = $STATUS_CODE"
+          # echo "STATUS_CODE=$STATUS_CODE" >> $GITHUB_OUTPUT
       - name: Print Status Code 
         run: echo "Status code = ${{ steps.closing_comment_step.STATUS_CODE }}"
