--- a/.github/workflows/closing-pr-comment-timestamp.yml
+++ b/.github/workflows/closing-pr-comment-timestamp.yml
@@ -40,10 +40,10 @@ jobs:
           COMMENT_URL="https://api.github.com/repos/${{github.repository}}/issues/NUM/comments"
           # Replace "NUM" with with the PR_NUMBER env var
           COMMENT_URL="${COMMENT_URL/NUM/$PR_NUMBER}"
-          # # -H = custom curl header, -X used to specify HTTP method, -d indicates the data to send
           
           echo $COMMENT_URL
-          STATUS_CODE=$(curl -s -H "Authorization: token ${GITHUB_TOKEN}" -X POST $COMMENT_URL -d "{\"body\":\"$COMMENT\"}")
+          # # -H = custom curl header, -X used to specify HTTP method, -d indicates the data to send
+          STATUS_CODE=$(curl -s -H "Authorization: token ${GITHUB_TOKEN}" -w "%{http_code} -X POST $COMMENT_URL -d "{\"body\":\"$COMMENT\"}")
           echo "STATUS_CODE = $STATUS_CODE.status"
           # echo "STATUS_CODE=$STATUS_CODE" >> $GITHUB_OUTPUT
       - name: Print Status Code 
