--- a/.github/workflows/closing-pr-comment-timestamp.yml
+++ b/.github/workflows/closing-pr-comment-timestamp.yml
@@ -43,8 +43,9 @@ jobs:
           
           echo $COMMENT_URL
           # # -H = custom curl header, -X used to specify HTTP method, -d indicates the data to send
-          STATUS_CODE=$(curl -s -H "Authorization: token ${GITHUB_TOKEN}" -w '%{http_code}' -X POST $COMMENT_URL -d "{\"body\":\"$COMMENT\"}")
-          echo "STATUS_CODE = $STATUS_CODE.status"
+          RESPONSE=$(curl -s -H "Authorization: token ${GITHUB_TOKEN}" -w '%{http_code}' -X POST $COMMENT_URL -d "{\"body\":\"$COMMENT\"}")
+          STATUS_CODE= ${{ fromJson(RESPONSE).status }}
+          echo "STATUS_CODE = $STATUS_CODE"
           # echo "STATUS_CODE=$STATUS_CODE" >> $GITHUB_OUTPUT
       - name: Print Status Code 
         run: echo "Status code = ${{ steps.closing_comment_step.STATUS_CODE }}"
