--- a/.github/workflows/closing-pr-comment-timestamp.yml
+++ b/.github/workflows/closing-pr-comment-timestamp.yml
@@ -44,7 +44,7 @@ jobs:
           echo $COMMENT_URL
           # # -H = custom curl header, -X used to specify HTTP method, -d indicates the data to send
           RESPONSE=$(curl -s -H "Authorization: token ${GITHUB_TOKEN}" -w '%{http_code}' -X POST $COMMENT_URL -d "{\"body\":\"$COMMENT\"}")
-          STATUS_CODE= ${{ fromJson(RESPONSE).status }}
+          STATUS_CODE= ${{ fromJson($RESPONSE).status }}
           echo "STATUS_CODE = $STATUS_CODE"
           # echo "STATUS_CODE=$STATUS_CODE" >> $GITHUB_OUTPUT
       - name: Print Status Code 
