try again diff approach

--- a/.github/workflows/closing-pr-comment-timestamp.yml
+++ b/.github/workflows/closing-pr-comment-timestamp.yml
@@ -43,12 +43,8 @@ jobs:
           
           echo $COMMENT_URL
           # # -H = custom curl header, -X used to specify HTTP method, -d indicates the data to send
-          echo "RESPONSE=$(curl -s -H 'Authorization: token ${GITHUB_TOKEN}' -X POST $COMMENT_URL -d '{\'body\':\'$COMMENT\'}')" >> $GITHUB_ENV
-          
-          # echo "STATUS_CODE = $STATUS_CODE"
-          # echo "STATUS_CODE=$STATUS_CODE" >> $GITHUB_OUTPUT
-      
-      - name: Print Status Code 1
-        run: echo STATUS_CODE= ${{ fromJson(env.RESPONSE).status }}
-      - name: Print Status Code 2
-        run: echo "Status code = ${{ steps.closing_comment_step.STATUS_CODE }}"
+          RESPONSE=$(curl -s -H "Authorization: token ${GITHUB_TOKEN}" -X POST $COMMENT_URL -d "{\"body\":\"$COMMENT\"}")
+          # echo "STATUS_CODE = $STATUS_CODE.status"
+          # echo "RESPONSE=$RESPONSE" >> $GITHUB_OUTPUT
+      - name: Print Status Code 
+        run: echo "Status code = ${{ steps.closing_comment_step.RESPONSE }}"
