--- a/.github/workflows/closing-pr-comment-timestamp.yml
+++ b/.github/workflows/closing-pr-comment-timestamp.yml
@@ -45,6 +45,6 @@ jobs:
           # # -H = custom curl header, -X used to specify HTTP method, -d indicates the data to send
           RESPONSE=$(curl -s -H "Authorization: token ${GITHUB_TOKEN}" -X POST $COMMENT_URL -d "{\"body\":\"$COMMENT\"}")
           # echo "STATUS_CODE = $STATUS_CODE.status"
-          # echo "RESPONSE=$RESPONSE" >> $GITHUB_OUTPUT
+          echo "RESPONSE=$RESPONSE" >> $GITHUB_OUTPUT
       - name: Print Status Code 
         run: echo "Status code = ${{ steps.closing_comment_step.RESPONSE }}"
