--- a/.github/workflows/closing-pr-comment-timestamp.yml
+++ b/.github/workflows/closing-pr-comment-timestamp.yml
@@ -44,7 +44,7 @@ jobs:
           echo $COMMENT_URL
           # # -H = custom curl header, -X used to specify HTTP method, -d indicates the data to send
           RESPONSE=$(curl -s -H "Authorization: token ${GITHUB_TOKEN}" -X POST $COMMENT_URL -d "{\"body\":\"$COMMENT\"}")
-          JSON=$(cat RESPONSE)
+          JSON=$(cat $RESPONSE)
           echo "JSON = $JSON"
           # echo "STATUS_CODE = $STATUS_CODE.status"
           echo "RESPONSE=$RESPONSE" >> $GITHUB_OUTPUT
