--- a/.github/workflows/closing-pr-comment-timestamp.yml
+++ b/.github/workflows/closing-pr-comment-timestamp.yml
@@ -47,6 +47,9 @@ jobs:
           JSON=${{ fromJson($RESPONSE) }}
           echo "JSON = $JSON"
           # echo "STATUS_CODE = $STATUS_CODE.status"
-          echo "RESPONSE=$RESPONSE" >> $GITHUB_OUTPUT
+          # echo "RESPONSE=$RESPONSE" >> $GITHUB_OUTPUT
+          echo "RESPONSE=$RESPONSE" >> $GITHUB_ENV
       - name: Print Status Code 
-        run: echo "Status code = ${{ steps.closing_comment_step.RESPONSE }}"
+        run: |
+          # echo "Status code = ${{ steps.closing_comment_step.RESPONSE }}"
+          echo "Status code = ${{ env.RESPONSE.status }}"
