--- a/.github/workflows/closing-pr-comment-timestamp.yml
+++ b/.github/workflows/closing-pr-comment-timestamp.yml
@@ -20,6 +20,8 @@ jobs:
   closing-pr-comment-job:
     
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     env:
       TIMESTAMP: $(date +"%Y-%m-%d %H:%M:%S")
       PR_NUMBER: ${{ github.event.pull_request.number }}
@@ -32,6 +34,8 @@ jobs:
         run: | 
           echo "Job manually started: Setting PR_NUMBER to value of inputs.pr_number_manual (${{ inputs.pr_number_manual }})"
           echo "PR_NUMBER=${{ inputs.pr_number_manual }}" >> $GITHUB_ENV
+      # Keep getting Resource not accessible by integration
+
       - name: Closing comment on PR
         id: closing_comment_step
         run: |
