change write permission to PRs
Kind of though contents would be a catch-all, guess not

--- a/.github/workflows/closing-pr-comment-timestamp.yml
+++ b/.github/workflows/closing-pr-comment-timestamp.yml
@@ -21,7 +21,7 @@ jobs:
     
     runs-on: ubuntu-latest
     permissions:
-      contents: write
+      pull-requests: write
     env:
       TIMESTAMP: $(date +"%Y-%m-%d %H:%M:%S")
       PR_NUMBER: ${{ github.event.pull_request.number }}
