--- a/.github/workflows/closing-pr-comment-timestamp.yml
+++ b/.github/workflows/closing-pr-comment-timestamp.yml
@@ -36,12 +36,17 @@ jobs:
           echo "PR_NUMBER=${{ inputs.pr_number_manual }}" >> $GITHUB_ENV
       # Keep getting Resource not accessible by integration
 
+      - name: Set TIMESTAMP
+        id: set-timestamp
+        run: echo "TIMESTAMP=$(date +"%Y%m%d%H%M%S")" >> $GITHUB_ENV
+
       - name: Closing comment on PR
         id: closing_comment_step
         run: |
           echo "Adding closing comment to PR Number: $PR_NUMBER"
           COMMENT="This pull request was closed on $TIMESTAMP."
           echo "COMMENT = $COMMENT"
+          echo "TIMESTAMP = ${{ env.TIMESTAMP }}"
           COMMENT_URL="https://api.github.com/repos/${{github.repository}}/issues/NUM/comments"
           # Replace "NUM" with with the PR_NUMBER env var
           COMMENT_URL="${COMMENT_URL/NUM/$PR_NUMBER}"
