--- a/.github/workflows/closing-pr-comment-timestamp.yml
+++ b/.github/workflows/closing-pr-comment-timestamp.yml
@@ -53,11 +53,11 @@ jobs:
           
           echo $COMMENT_URL
           # # -H = custom curl header, -X used to specify HTTP method, -d indicates the data to send
-          # RESPONSE=$(curl -s -H "Authorization: token ${GITHUB_TOKEN}" -X POST $COMMENT_URL -d "{\"body\":\"$COMMENT\"}")
-          # echo $RESPONSE
+          RESPONSE=$(curl -s -H "Authorization: token ${GITHUB_TOKEN}" -X POST $COMMENT_URL -d "{\"body\":\"$COMMENT\"}")
+          echo $RESPONSE
           # echo "STATUS_CODE = $STATUS_CODE.status"
           # echo "RESPONSE=$RESPONSE" >> $GITHUB_OUTPUT
-          # echo "RESPONSE=$RESPONSE" >> $GITHUB_ENV
+          echo "RESPONSE=$RESPONSE" >> $GITHUB_ENV
       - name: Print Status Code 
         run: |
           # echo "Status code = ${{ steps.closing_comment_step.RESPONSE }}"
