--- a/.github/workflows/closing-pr-comment-timestamp.yml
+++ b/.github/workflows/closing-pr-comment-timestamp.yml
@@ -57,8 +57,8 @@ jobs:
           echo $RESPONSE
           # echo "STATUS_CODE = $STATUS_CODE.status"
           # echo "RESPONSE=$RESPONSE" >> $GITHUB_OUTPUT
-          echo "RESPONSE=$RESPONSE" >> $GITHUB_ENV
+          # echo "RESPONSE=$RESPONSE" >> $GITHUB_ENV
       - name: Print Status Code 
         run: |
           # echo "Status code = ${{ steps.closing_comment_step.RESPONSE }}"
-          echo "Status code = ${{ env.RESPONSE.status }}"
+          # echo "Status code = ${{ env.RESPONSE.status }}"
