--- a/.github/workflows/closing-pr-comment-timestamp.yml
+++ b/.github/workflows/closing-pr-comment-timestamp.yml
@@ -54,7 +54,7 @@ jobs:
           # echo $COMMENT_URL
           # # -H = custom curl header, -X used to specify HTTP method, -d indicates the data to send
           # RESPONSE=$(curl -s -H "Authorization: token ${GITHUB_TOKEN}" -w "%{http_code}" -X POST $COMMENT_URL -d "{\"body\":\"$COMMENT\"}")
-          RESPONSE=$(curl -s -o dev/null -H "Authorization: token ${GITHUB_TOKEN}" -w "%{http_code}" -X POST -i $COMMENT_URL -d "{\"body\":\"$COMMENT\"}")
+          RESPONSE=$(curl -s -o dev/null -w "%{http_code}" -H "Authorization: token ${GITHUB_TOKEN}" -X POST -i $COMMENT_URL -d "{\"body\":\"$COMMENT\"}")
           echo $RESPONSE
           # echo "STATUS_CODE = $STATUS_CODE.status"
           # echo "RESPONSE=$RESPONSE" >> $GITHUB_OUTPUT
