add in outputs to echo
So specific this one

--- a/.github/workflows/closing-pr-comment-timestamp.yml
+++ b/.github/workflows/closing-pr-comment-timestamp.yml
@@ -58,5 +58,5 @@ jobs:
           echo "RESPONSE=$RESPONSE" >> $GITHUB_OUTPUT
       - name: Evaluate Status Code 
         run: |
-          echo "Status code = ${{ steps.closing_comment_step.RESPONSE }}"
+          echo "Status code = ${{ steps.closing_comment_step.outputs.RESPONSE }}"
           # echo "Status code = ${{ env.RESPONSE.status }}"
