--- a/.github/workflows/closing-pr-comment-timestamp.yml
+++ b/.github/workflows/closing-pr-comment-timestamp.yml
@@ -29,15 +29,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       # If manually run, use value of pr_number_manual
-      # If auto run use PR_NUMBER
-      # Issue is when auto run, pr_number_manual still being used 
+      # If auto run (trigger: PR closes) use PR_NUMBER
+      # Issue is when auto run, pr_number_manual has no value so if keyword errors out
       - name: Assess pr_number_manual input
+        # If input is not default value, this is a manual run and PR number should be overwritten with manual input
+        # If input is default value, skip this step
         if: ${{ github.event.inputs.pr_number_manual != 'default' }}
         run: | 
-          if [[ ${{ github.event.inputs.pr_number_manual }} != 'default' ]]
-          then
-            echo "NOT DEFAULT: ${{ github.event.inputs.pr_number_manual }}"
-          fi
+          # if [[ ${{ github.event.inputs.pr_number_manual }} != 'default' ]]
+          # then
+            # echo "NOT DEFAULT: ${{ github.event.inputs.pr_number_manual }}"
+          # fi
           echo "Job manually started: Setting PR_NUMBER to value of inputs.pr_number_manual (${{ inputs.pr_number_manual }})"
           echo "PR_NUMBER=${{ inputs.pr_number_manual }}" >> $GITHUB_ENV
 
