--- a/.github/workflows/closing-pr-comment-timestamp.yml
+++ b/.github/workflows/closing-pr-comment-timestamp.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Assess pr_number_manual input
         # If input is not default value, this is a manual run and PR number should be overwritten with manual input
         # If input is default value, skip this step
-        if: ${{ github.event.inputs.pr_number_manual != 'default' }}
+        if: ${{ github.event.inputs.pr_number_manual != null }}
         run: | 
           # if [[ ${{ github.event.inputs.pr_number_manual }} != 'default' ]]
           # then
