--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -16,7 +16,7 @@ on:
   # The inputs context allows you to put in inputs when you run a workflow manually (reference via github.event.inputs)
   # They will appear when you hit the 'Run Workflow' buttons on the Action page, in a pop-up form format
   # Inputs can be customized into types to be required and have default values (see below for an example of each input type)
-  # When a workflow is triggered (i.e. NOT manually), these inputs will be null. TODO: Wording
+  # When a workflow is triggered (i.e. NOT manually), these inputs will be null if referenced.
   workflow_dispatch:
     inputs:
       example_string_input:
