--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -127,13 +127,13 @@ jobs:
         run: |
           echo "DIVISIBLE_BY_2_B=$(./shell-scripts/divide.sh 'is_divisible_by_2' '2')" | tr '\n' ' ' >> $GITHUB_OUTPUT
       
-      # Example of how to reference output from another previous, step-level env var
+      # Example of how to reference output from another previous, step-level env var. Use the step id mentioned in previous step/comments
       - name: Return value from previous step via GITHUB_OUTPUT 
         env:
           DIVISIBLE_BY_2_B: ${{ steps.divis_by_2.outputs.DIVISIBLE_BY_2_B }}
         run: echo "DIVISIBLE_BY_2_B = $DIVISIBLE_BY_2_B"
 
-      - name: Example conditional (Runs if inputs.example_string_input is true)
+      - name: Example conditional (Runs if inputs.example_string_input is 'ex'')
         if: github.event.inputs.example_string_input == 'ex'
         run: echo "You are seeing this statement because you put 'ex' in example_string_input!"
       # TODO: Figure out how to list teams
