--- a/.github/workflows/closing-pr-comment-timestamp.yml
+++ b/.github/workflows/closing-pr-comment-timestamp.yml
@@ -36,8 +36,8 @@ jobs:
         # If input is default value, skip this step
         if: ${{ github.event.inputs.pr_number_manual != null }}
         run: |
-          echo "Job manually started: Setting PR_NUMBER to value of inputs.pr_number_manual (${{ inputs.pr_number_manual }})"
-          echo "PR_NUMBER=${{ inputs.pr_number_manual }}" >> $GITHUB_ENV
+          echo "Job manually started: Setting PR_NUMBER to value of github.event.inputs.pr_number_manual (${{ github.event.inputs.pr_number_manual }})"
+          echo "PR_NUMBER=${{ github.event.inputs.pr_number_manual }}" >> $GITHUB_ENV
 
       - name: Set TIMESTAMP
         id: set-timestamp
@@ -57,9 +57,9 @@ jobs:
           # In this case, entity to right of -o is /dev/null, which is a data black hole--any data written to it is immediately discarded.
           # We use /dev/null here because we only want to capture the HTTP status code (we use -w "%{http_code}" to get it) 
           # -H = custom curl header, -X used to specify HTTP method, -d indicates the data to send
-          RESPONSE=$(curl -s -o /dev/null -H "Authorization: token ${GITHUB_TOKEN}" -w "%{http_code}" -X POST -i $COMMENT_URL -d "{\"body\":\"$COMMENT\"}")
-          echo "RESPONSE=$RESPONSE" >> $GITHUB_OUTPUT
+          STATUS_CODE=$(curl -s -o /dev/null -H "Authorization: token ${GITHUB_TOKEN}" -w "%{http_code}" -X POST -i $COMMENT_URL -d "{\"body\":\"$COMMENT\"}")
+          echo "STATUS_CODE=$STATUS_CODE" >> $GITHUB_OUTPUT
       - name: Evaluate Status Code 
         run: |
           # echo "Not doing anything currently. TODO: DELETE ME WHEN DONE DEBUGGING"
-          echo "Status code = ${{ steps.closing_comment_step.outputs.RESPONSE }}"
+          echo "Status code = ${{ steps.closing_comment_step.outputs.STATUS_CODE }}"
