Attempt to purpose fail

--- a/.github/workflows/closing-pr-comment-timestamp.yml
+++ b/.github/workflows/closing-pr-comment-timestamp.yml
@@ -59,7 +59,8 @@ jobs:
           # -H = custom curl header, -X used to specify HTTP method, -d indicates the data to send
           STATUS_CODE=$(curl -s -o /dev/null -H "Authorization: token ${GITHUB_TOKEN}" -w "%{http_code}" -X POST -i $COMMENT_URL -d "{\"body\":\"$COMMENT\"}")
           echo "STATUS_CODE=$STATUS_CODE" >> $GITHUB_OUTPUT
-      - name: Evaluate Status Code 
+      - name: Mark as Fail if Bad Status Code 
+        if: ${{ !startsWith(steps.closing_comment_step.outputs.STATUS_CODE,  "2" }}
         run: |
           # echo "Not doing anything currently. TODO: DELETE ME WHEN DONE DEBUGGING"
-          echo "Status code = ${{ steps.closing_comment_step.outputs.STATUS_CODE }}"
+          echo "Status code is non-200  (${{ steps.closing_comment_step.outputs.STATUS_CODE }}), marking as failure."
